--- a/style.css
+++ b/style.css
@@ -11,9 +11,12 @@ header h1{
     display: inline-block;
     position: absolute;
     color: black;
-    margin-left: 33%;
-    margin-top: 19%;
-    font-size: 50px;
+    font-size: 53px;
+    margin-top: 20%;
+    text-align: center;
+    background-color: white;
+    width: 100%;
+    opacity:0.8;
 }
 main img{
     width: 90%;
@@ -51,17 +54,14 @@ footer img{
     margin-left: 14px;
 }
 footer section{
-    width: 33%;
     display: block;
+    width: 33%;
     float: left;
 }
 footer h2{
     margin-top: 10%;
     margin-bottom: 5%;
     margin-left: 14px;
-}
-footer section h2{
-    color: white;
 }
 footer p{
     margin-left: 14px;
@@ -72,6 +72,9 @@ footer section h4{
     margin-top: 13%;
     color:black;
     display: inline-block;    
+}
+footer section h4:hover{
+    color: white;
 }
 footer section a[href*="http://www.clicrbs.com.br"]{
     background-color: rgb(255, 225, 0);
@@ -99,4 +102,18 @@ footer section a[href*="http://www.terra.com.br"]{
     margin-top: 6%;
     margin-left: 4%;
     display: inline-block;
+}
+footer section h2[href*="#2"]{
+    color: orange;
+}
+footer section h2[href*="#3"]{
+    color: palevioletred;
+}
+footer section h2[href*="#1"]{
+    color:rgb(255, 225, 0);
+}
+iframe{
+    margin-top: 3%;
+    margin-left: 30%;
+    margin-bottom: 1%;
 }
